current/src/styles/index.css
@font-face {
  font-family: "Atkinson Hyperlegible";
  src: url("./Atkinson-Hyperlegible/WebFonts/TTF/Atkinson-Hyperlegible-Regular-102.ttf") format("truetype");
}

@font-face {
  font-family: "Atami";
  src: url("./Atami/Atami-Bold.otf") format("opentype");
}


body {
  margin: 0;
  font-family: "Atami", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.preload {
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 0;
  width: 100%;
  height: 100vh;
  background-color: #171717;
  color: #f9f5e9;
  z-index: 150;
}

.preload-finish {
  opacity: 0;
  pointer-events: none;
  transition: all 0.75s ease 1s;
}

.resultsload-finish {
  opacity: 0;
  pointer-events: none;
  transition: all 0.75s ease 1s;
}

#loading-pic {
  height: 15em;
  color: #f9f5e9;
  white-space: nowrap;
}

#loading-results-pic {
  height: 15em;
  color: #f9f5e9;
  white-space: nowrap;
}


.load-anim {
  -webkit-animation: preload-label 2s 10 cubic-bezier(0.2, 0.6, 0.3, 1);
  -moz-animation: preload-label 2s 10 cubic-bezier(0.2, 0.6, 0.3, 1);
  animation: preload-label 2s 10 cubic-bezier(0.2, 0.6, 0.3, 1);
}

@-webkit-keyframes preload-label {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.15;
  }

  100% {
    opacity: 1;
  }
}

@-moz-keyframes preload-label {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.15;
  }

  100% {
    opacity: 1;
  }
}

@keyframes preload-label {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.15;
  }

  100% {
    opacity: 1;
  }
}

.content {
  width: 100vw;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#introtext {
  font-family: "Atami";
}

#headerpic {
  /*
  width: 8vw;
  height: 8vw;
  min-width: 200px;
  min-height: 200px;
  */
  display: block;
  margin-left: auto;
  margin-right: auto;
  border-radius: 50%;
}

@import url("./output.css");
.toggleDarkBtn {
  position: relative;
  display: inline-block;
  width: 65px;
  height: 41px;
}

.toggleDarkBtn input {
  opacity: 0;
  width: 0;
  height: 0;
}
.slideBtnTg {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgb(241, 40, 40);
  -webkit-transition: 0.5s;
  transition: 0.5s;
}
.slideBtnTg:before {
  position: absolute;
  content: "";
  height: 30px;
  width: 30px;
  left: 5px;
  bottom: 5px;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  background-color: white;
}
input:checked + .slideBtnTg {
  background-color: #1d1e1f;
}
input:focus + .slideBtnTg {
  box-shadow: 0 0 1px #2196f3;
}
input:checked + .slideBtnTg:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}
.slideBtnTg.round {
  border-radius: 34px;
}
.slideBtnTg.round:before {
  border-radius: 50%;
}

.landing-flex-container {
  display: flex;
  flex-wrap: wrap;
  width: 92vw;
  margin-left:auto;
  margin-right:auto;
}

.landing-flex-item-left {
  padding: 10px;
  flex: 50%;
}

.landing-flex-item-right {
  flex: 50%;
}

/* Responsive layout - makes a one column-layout instead of a two-column layout */
@media (max-width: 800px) {
  
  .landing-flex-item-right, .landing-flex-item-left {
    flex: 100%;
  }
}



.glitch {
  position: relative;

  text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75),
    -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
    0.025em 0.05em 0 rgba(0, 0, 255, 0.75);

  animation: glitch 1500ms infinite;
}

.glitch span {
  position: absolute;
  top: 0;
  left: 0;
}

.glitch span:first-child {
  animation: glitch 1650ms infinite;
  transform: translate(-0.00125em, -0.00625em);
  /* color: green; */
  opacity: 0.8;
}

.glitch span:last-child {
  animation: glitch 1375ms infinite;
  transform: translate(0.00625em, 0.00125em);
  /* color: red; */
  opacity: 0.8;
}

/* https://web.dev/prefers-reduced-motion/#(bonus)-forcing-reduced-motion-on-all-websites */

@keyframes glitch {
  0% {
    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75),
      -0.05em -0.025em 0 rgba(0, 255, 0, 0.75),
      -0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
  }
  /*
  14% {
    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75),
      -0.05em -0.025em 0 rgba(0, 255, 0, 0.75),
      -0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
  }
  */
  25% {
    text-shadow: -0.05em -0.025em 0 rgba(255, 0, 0, 0.75),
      0.025em 0.025em 0 rgba(0, 255, 0, 0.75),
      -0.05em -0.05em 0 rgba(0, 0, 255, 0.75);
  }
    /*
  49% {
    text-shadow: -0.05em -0.025em 0 rgba(255, 0, 0, 0.75),
      0.025em 0.025em 0 rgba(0, 255, 0, 0.75),
      -0.05em -0.05em 0 rgba(0, 0, 255, 0.75);
  }
  */
  50% {
    text-shadow: 0.025em 0.05em 0 rgba(255, 0, 0, 0.75),
      0.05em 0 0 rgba(0, 255, 0, 0.75), 0 -0.05em 0 rgba(0, 0, 255, 0.75);
  }
    /*
  99% {
    text-shadow: 0.025em 0.05em 0 rgba(255, 0, 0, 0.75),
      0.05em 0 0 rgba(0, 255, 0, 0.75), 0 -0.05em 0 rgba(0, 0, 255, 0.75);
  }*/
  75% {
    text-shadow: -0.025em 0 0 rgba(255, 0, 0, 0.75),
      -0.025em -0.025em 0 rgba(0, 255, 0, 0.75),
      -0.025em -0.05em 0 rgba(0, 0, 255, 0.75);
  }
  100% {
    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75),
      -0.05em -0.025em 0 rgba(0, 255, 0, 0.75),
      -0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
  }
}

@media (prefers-reduced-motion: reduce) {
  *,
  ::before,
  ::after {
    animation-delay: -1ms !important;
    animation-duration: 1ms !important;
    animation-iteration-count: 1 !important;
    background-attachment: initial !important;
    scroll-behavior: auto !important;
    transition-duration: 0s !important;
    transition-delay: 0s !important;
  }
}

section{
  width:100vw;
}

.parallax {
  align-items: center;
  height:100px;
  overflow: hidden;
  letter-spacing: -2px;
  margin: 0;
  white-space: nowrap;
  display: flex;
  flex-wrap: nowrap;
}

.parallax .scroller {
  font-weight: 600;
  text-transform: uppercase;
  font-size: 64px;
  display: flex;
  white-space: nowrap;
  display: flex;
  flex-wrap: nowrap;
}

.parallax span {
  display: inline-flex;
}

